--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Саморазвитие и Личностный Рост</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div class="container">
@@ -50,7 +50,7 @@
             </a>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="java.js"></script>
 </body>
 </html>
 
