--- a/index.html
+++ b/index.html
@@ -40,15 +40,20 @@
             </div>
         </div>
 
-        <!-- Блок с кнопками -->
-        <div class="button-container"> <h4>РЕКЛАМА:</h4>
-            <a href="https://www.bybit.com/invite?ref=LGZZ1P" class="promo-button" target="_blank">
-                Зарабатывай на "ByBit"! Получай до 6045 долларов США в виде бонусов за участие!
-            </a>
-            <a href="https://epsgroup.pro/kp1" class="promo-button" target="_blank">
-                Хочешь образование психолога за 6-18 месяцев и зарабатывать от 7.000Є "EPSEducation"!
-            </a>
-        </div>
+      <!-- Обновленный блок с заголовком -->
+<div class="header">
+    <h2>Специальные предложения!</h2>
+</div>
+
+<!-- Блок с кнопками -->
+<div class="button-container">
+    <a href="https://www.bybit.com/invite?ref=LGZZ1P" class="promo-button" target="_blank">
+        Зарабатывай на "ByBit"! Получай до 6045 долларов США в виде бонусов за участие!
+    </a>
+    <a href="https://epsgroup.pro/kp1" class="promo-button" target="_blank">
+        Хочешь образование психолога за 6-18 месяцев и зарабатывать от 7.000Є "EPSEducation"!
+    </a>
+</div>
     </div>
     <script src="java.js"></script>
 </body>
