--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
       <!-- Обновленный блок с заголовком -->
 <div class="header">
-    <h2>Специальные предложения!</h2>
+    <h2>Специальные предложения
+реклама👇</h2>
 </div>
 
 <!-- Блок с кнопками -->
