--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <div class="container">
         <div class="intro">
-            <h1>Программа Личностного Роста</h1>
-            <img src="https://cdn-icons-png.flaticon.com/512/5131/5131750.png" alt="Логотип программы" class="logo">
-            <p>Добро пожаловать! В течение 10 дней вы получите доступ к 10 урокам и практическим заданиям, которые помогут вам в саморазвитии. Каждый новый урок будет доступен только на следующий день после предыдущего. Ваш прогресс зависит от того, как вы придерживаетесь этого расписания!</p>
+           <h1>Программа Личностного Роста</h1>
+            <img src="https://cdn-icons-png.flaticon.com/512/5131/5131750.png" alt="Логотип программы" class="logo"> 
+            <p>Добро пожаловать! В течение 10 дней вы получите доступ к 10 урокам и практическим заданиям, которые помогут вам в саморазвитии.</p> <h3>ВАЖНО:</h3><p>Каждый новый урок будет доступен только на следующий день с промежутком равным 24 часам, после предыдущего (предыдущий исчезает безвозвратно), тоесть каждый новый урок будет открываться автоматически в одно и то же время (время вашего первого входа) на следующий день. Это один из уроков который преподносит практика данной методики, в которой заложен смысл о упущеных возможностях!</p>
+          <p>Ваш прогресс зависит от дисциплины и от того, как вы придерживаетесь этого расписания! Успехов!</p>
         </div>
 
         <!-- Прогресс-бар -->
@@ -42,7 +43,8 @@
 
       <!-- Обновленный блок с заголовком -->
 <div class="header">
-    <h2>Специальные предложения
+    <h2>Авторская программа личностного роста разработанная Чернавским Е.В.</h2>
+    <h2>Специальные предложения и
 реклама👇</h2>
 </div>
 
