--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="card-back">
                     <h2>Рекомендации:</h2>
                     <p id="lessonGuide">Подробные рекомендации по выполнению задания...</p>
-                    <button class="flip-button" id="backBtn">↩️ Назад</button>
+                    <button class="flip-button" id="backBtn">← Назад</button>
                 </div>
             </div>
         </div>
