--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="intro">
            <h1>Программа Личностного Роста</h1>
             <img src="https://cdn-icons-png.flaticon.com/512/5131/5131750.png" alt="Логотип программы" class="logo"> 
-            <p>Добро пожаловать! В течение 10 дней вы получите доступ к 10 урокам и практическим заданиям, которые помогут вам в саморазвитии.</p> <h3>ВАЖНО:</h3><p>Каждый новый урок будет доступен только на следующий день с промежутком равным 24 часам, после предыдущего (предыдущий исчезает безвозвратно), тоесть каждый новый урок будет открываться автоматически в одно и то же время (время вашего первого входа) на следующий день. Это один из уроков который преподносит практика данной методики, в которой заложен смысл о упущеных возможностях!</p>
+            <p>Добро пожаловать! Это авторская программа личностного роста разработанная Чернавским Е.В. в рамках которой вы в течение 10 дней будите получать доступ к 10 урокам и практическим заданиям, которые помогут вам в саморазвитии и трансформации в лучшую версию самого себя, а также найти и открыть для себя новые возможности своего скрытого потенциала и улучшить качество жизни. Готовы к захватывающему путишествию?</p> <h3>ВАЖНО:</h3><p>Каждый новый урок будет доступен только на следующий день с промежутком равным 24 часам, после предыдущего (предыдущий исчезает безвозвратно), тоесть каждый новый урок будет открываться автоматически в одно и то же время (время вашего первого входа) на следующий день. Это один из уроков который преподносит практика данной методики, в которой заложен смысл о упущеных возможностях!</p>
           <p>Ваш прогресс зависит от дисциплины и от того, как вы придерживаетесь этого расписания! Успехов!</p>
         </div>
 
@@ -43,7 +43,6 @@
 
       <!-- Обновленный блок с заголовком -->
 <div class="header">
-    <h2>Авторская программа личностного роста разработанная Чернавским Е.В.</h2>
     <h2>Специальные предложения и
 реклама👇</h2>
 </div>
@@ -57,8 +56,24 @@
         Хочешь образование психолога за 6-18 месяцев и зарабатывать от 7.000Є "EPSEducation"!
     </a>
 </div>
+      <!-- Секция "Поделиться с друзьями" -->
+<div class="share-section">
+    <h2>Поделитесь программой с друзьями!</h2>
+    <p>
+        Помогите своим друзьям открыть двери к личностному росту и саморазвитию!
+        Поделитесь этой уникальной программой, которая научит их важным навыкам и
+        даст возможность стать лучше. Просто нажмите на одну из кнопок ниже и
+        пригласите их присоединиться к этому удивительному путешествию!
+    </p>
+    <div class="social-buttons">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=http://surl.li/ijhcqg" target="_blank" class="social-button facebook">Facebook</a>
+        <a href="https://twitter.com/intent/tweet?text=Я%20прошел%20эту%20программу%20личностного%20роста!%20Присоединяйся%20и%20ты!&url=http://surl.li/ijhcqg" target="_blank" class="social-button twitter">Twitter</a>
+        <a href="https://t.me/share/url?url=http://surl.li/ijhcqg&text=Посмотри%20эту%20программу%20личностного%20роста%20я%20уже%20в%20деле!" target="_blank" class="social-button telegram">Telegram</a>
+        <a href="https://www.instagram.com/?url=http://surl.li/ijhcqg" target="_blank" class="social-button instagram">Instagram</a>
+        <a href="https://www.linkedin.com/sharing/share-offsite/?url=http://surl.li/ijhcqg" target="_blank" class="social-button linkedin">LinkedIn</a>
+    </div>
+</div>
     </div>
     <script src="java.js"></script>
 </body>
 </html>
-
