--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         пригласите их присоединиться к этому удивительному путешествию!
     </p>
     <div class="social-buttons">
-        <a href="https://www.facebook.com/sharer/sharer.php?u=http://surl.li/ijhcqg" target="_blank" class="social-button facebook">Facebook</a>
-        <a href="https://twitter.com/intent/tweet?text=Я%20прошел%20эту%20программу%20личностного%20роста!%20Присоединяйся%20и%20ты!&url=http://surl.li/ijhcqg" target="_blank" class="social-button twitter">Twitter</a>
-        <a href="https://t.me/share/url?url=http://surl.li/ijhcqg&text=Посмотри%20эту%20программу%20личностного%20роста%20я%20уже%20в%20деле!" target="_blank" class="social-button telegram">Telegram</a>
-        <a href="https://www.instagram.com/?url=http://surl.li/ijhcqg" target="_blank" class="social-button instagram">Instagram</a>
-        <a href="https://www.linkedin.com/sharing/share-offsite/?url=http://surl.li/ijhcqg" target="_blank" class="social-button linkedin">LinkedIn</a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=http://t.me/My_program_10_bot" target="_blank" class="social-button facebook">Facebook</a>
+        <a href="https://twitter.com/intent/tweet?text=Я%20прошел%20эту%20программу%20личностного%20роста!%20Присоединяйся%20и%20ты!&url=http://t.me/My_program_10_bot" target="_blank" class="social-button twitter">Twitter</a>
+        <a href="https://t.me/share/url?url=http://t.me/My_program_10_bot&text=Посмотри%20эту%20программу%20личностного%20роста%20я%20уже%20в%20деле!" target="_blank" class="social-button telegram">Telegram</a>
+        <a href="https://www.instagram.com/?url=http://t.me/My_program_10_bot" target="_blank" class="social-button instagram">Instagram</a>
+        <a href="https://www.linkedin.com/sharing/share-offsite/?url=http://t.me/My_program_10_bot" target="_blank" class="social-button linkedin">LinkedIn</a>
     </div>
 </div>
     </div>
