--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Саморазвитие и Личностный Рост</title>
     <link rel="stylesheet" href="Style.css">
+    <style>
+        /* Стили для модального окна */
+        #modal {
+            display: none; /* Скрыто по умолчанию */
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+        }
+        .modal-content img {
+            width: 100px; /* Задаем ширину логотипа */
+        }
+        .modal-content button {
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -74,6 +107,37 @@
     </div>
 </div>
     </div>
+        <!-- Модальное окно -->
+    <div id="modal">
+        <div class="modal-content">
+            <img src="icon-512x512.png" alt="Логотип программы">
+            <h2>Вы уверены, что хотите покинуть страницу?</h2>
+            <p>Пожалуйста, подумайте, перед тем как уходить, так как урок не сохраняеться и повторно вы его уже не увидите, в течении 24 часов с момента открытия, исчезнет и откроеться новый. Вернитесь и запишите информацию и задание, или сфотографируйте (сделайте скриншот) что бы не потерять...</p>
+            <button id="stayButton">Остаться на странице</button>
+        </div>
+    </div>
+
+    <script>
+        window.onbeforeunload = function(event) {
+            // Отменяем стандартное сообщение браузера
+            event.preventDefault();
+            // Возвращаем пустую строку, чтобы показать диалог
+            event.returnValue = '';
+
+            // Показать модальное окно
+            document.getElementById('modal').style.display = 'flex';
+
+            // Останавливаем действие по умолчанию
+            return ''; 
+        };
+
+        // Функция для закрытия модального окна и отмены выхода
+        document.getElementById('stayButton').onclick = function() {
+            // Скрываем модальное окно
+            document.getElementById('modal').style.display = 'none';
+        };
+    </script>
+  <!-- Модальное окно закончился код -->
     <script src="java.js"></script>
 </body>
 </html>
