--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Саморазвитие и Личностный Рост</title>
     <link rel="stylesheet" href="Style.css">
+    <link rel="icon" href="icon-192x192.png" type="image/png" sizes="192x192">
     <style>
         /* Стили для модального окна */
         #modal {
