--- a/congratulations.html
+++ b/congratulations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Поздравляем!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div class="congratulations-container">
@@ -17,6 +17,6 @@
         <a href="https://t.me/My_lider_program_10_bot" class="button">Перейти к программе</a>
     </div>
 
-    <script src="script.js"></script>
+    <script src="java.js"></script>
 </body>
 </html>
